Stepdown can deadlock with curOp + resharding.

XMLWordPrintableJSON

    • Type: Bug
    • Resolution: Fixed
    • Priority: Major - P3
    • 8.1.0-rc0, 8.0.24
    • Affects Version/s: None
    • Component/s: None
    • None
    • Cluster Scalability
    • Fully Compatible
    • ALL
    • v8.0
    • 200
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      Deadlock is between

      (a) Stepdown thread takes RSTL in modeX, then tries to get PrimaryOnlyService _mutex when calling PrimaryOnlyService::onStepDown.

      and

      (b) thread that calls currentOp, takes PrimaryOnlyService _mutex while in PrimaryOnlyService::reportInstanceInfoForCurrentOp and trying to get collection IS lock in ReshardingRecipientService::RecipientStateMachine::_tryFetchBuildIndexMetrics

            Assignee:
            Unassigned
            Reporter:
            Randolph Tan
            Votes:
            0 Vote for this issue
            Watchers:
            6 Start watching this issue

              Created:
              Updated:
              Resolved: