SERVER-101385 Change ReshardingRecipientService reportForCurrentOp to use the lock free variant to prevent deadlocks (#32851)

GitOrigin-RevId: 42044034107bcb549fd6f24e39c8c939c6b0f13e